aseds-exam-backend/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: exam2
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "asedsexam.com"
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service: 
              name: frontend
              port: 
                number: 80
